--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "moneyphp/money": "^3.1"
+        "moneyphp/money": "^3.1",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
