--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ deploy_production:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - ls -lah ~/.composer/vendor/bin/
     - ~/.composer/vendor/bin/envoy
+    - ls -lah
     - ~/.composer/vendor/bin/envoy run deploy
   environment:
     name: production
