--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ deploy_production:
     - ls -lah ~/.composer/vendor/bin/
     - ~/.composer/vendor/bin/envoy
     - ls -lah
+    - whoami
     - ~/.composer/vendor/bin/envoy run deploy
   environment:
     name: production
