--- a/.env.testing
+++ b/.env.testing
@@ -11,3 +11,6 @@ CACHE_DRIVER=array
 SESSION_DRIVER=array
 QUEUE_DRIVER=sync
 MAIL_DRIVER=log
+
+JWT_SECRET=CBGwAIXTVRhXR8TV0fddOzbn3LjxXQnd
+JWT_TTL=5000
